--- a/05/templates/home.html
+++ b/05/templates/home.html
@@ -1,11 +1,10 @@
-<html>
-<head>
-    <title>{{title}}</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='main.css') }}">
-  </head>
+
+{% extends "base.html" %}
+{% block content %}
 
   <body>
-    <h2>Hello, World!</h2>      
+    <h2>Hello, World!</h2>  
+    <h2>Halo, {{user}}</h2>    
   </body>
 
-</html>
+{% endblock %}
