--- a/06/templates/hasil.html
+++ b/06/templates/hasil.html
@@ -3,7 +3,8 @@
 {% block content %}
 
   <body>
-    <h2>Ini adalah profil {{user}}</h2>
+    <h2>Halo {{nama}}</h2>
+    <h2>{{angka}}</h2>
   </body>
 
 {% endblock %}
