--- a/06/templates/home.html
+++ b/06/templates/home.html
@@ -3,7 +3,8 @@
 {% block content %}
 
   <body>
-    <h2>Ini adalah profil {{user}}</h2>
+    <h2>Hello, World!</h2>  
+    <h2>Halo, {{user}}</h2>    
   </body>
 
 {% endblock %}
