--- a/08/templates/base.html
+++ b/08/templates/base.html
@@ -5,10 +5,8 @@
 
   </head>
   <div class="topnav">
-    <a class="active" href="#home">Home</a>
-    <a href="#news">News</a>
-    <a href="#contact">Contact</a>
-    <a href="#about">About</a>
+    <a class="active" href="{{ url_for('home')}}">Home</a>
+    <a href="{{ url_for('insert')}}">Insert</a>
   </div> 
   {% block content %}{% endblock %}
 </html>
